// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialog snapshots Dialog: 0 1`] = `
<div
  aria-hidden={true}
  className="dialog-0-1-1"
>
  <div
    className="dialog_contentRegion-0-1-3"
    role="dialog"
    style={
      Object {
        "height": "300px",
        "width": "500px",
      }
    }
    tabIndex={-1}
  />
</div>
`;

exports[`dialog snapshots Dialog: 1 1`] = `
<div
  aria-hidden={true}
  className="dialog-0-1-4"
>
  <div
    className="dialog_modalOverlay-0-1-5"
    onClick={[Function]}
    role="presentation"
    tabIndex={-1}
  />
  <div
    className="dialog_contentRegion-0-1-6"
    role="dialog"
    style={
      Object {
        "height": "350px",
        "width": "500px",
      }
    }
    tabIndex={-1}
  />
</div>
`;
